# qt-mvc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PersonalInfo.cpp  PersonalInfo.hpp  PersonalModel.cpp  PersonalModel.hpp  PersonalWidget.cpp  PersonalWidget.hpp  PersonalWidget.ui  main.cpp
